# dpdk

./: meson.build  meson_options.txt
app/: meson.build
config/: meson.build
drivers/: meson.build
examples/: meson.build
lib/: meson.build
lib/librte_eal/windows/: eal_alarm.c
lib/librte_eal/windows/include/: meson.build
lib/librte_eal/windows/include/eal/: meson.build
lib/librte_eal/windows/include/eal/netinet/: meson.build
lib/librte_eal/windows/include/eal/sys/: meson.build
subprojects/: wpdk.wrap
subprojects/test/: meson.build
